--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 python-dotenv
-langchain>=0.0.200
-openai>=0.27.6
-tiktoken>=0.4.0
-atlassian-python-api>=3.38.0
-beautifulsoup4>=4.12.2
-pytesseract>=0.3.10
-pdf2image>=1.16.3
-Pillow>=9.5.0
-lxml>=4.9.2
-svglib>=1.5.1
-rlPyCairo>=0.3.0
-python-poppler>=0.4.1
-xlrd>=2.0.1
+langchain==0.0.200
+openai==0.27.6
+tiktoken==0.4.0
+atlassian-python-api==3.38.0
+beautifulsoup4==4.12.2
+pytesseract==0.3.10
+pdf2image==1.16.3
+Pillow==9.5.0
+lxml==4.9.2
+svglib==1.5.1
+rlPyCairo==0.3.0
+python-poppler==0.4.1
+xlrd==2.0.1
