POC sample file uploader to Quivr backend.
Signed-off-by: Michael Tan <tan.michael@mac.com>

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ ATLASSIAN_SITENAME=
 ATLASSIAN_USERNAME=
 ATLASSIAN_API_KEY=
 ATLASSIAN_SPACE_KEY=
+QUIVR_API_KEY=
+QUIVR_BACKEND_URL=http://host.docker.internal:5050
