Implemented Conluence page extraction to folder.
Signed-off-by: Michael Tan <tan.michael@mac.com>

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,6 @@ ATLASSIAN_SITENAME=
 ATLASSIAN_USERNAME=
 ATLASSIAN_API_KEY=
 ATLASSIAN_SPACE_KEY=
+CONFLUENCE_CONTENT_FOLDER=content/confluence
 QUIVR_API_KEY=
 QUIVR_BACKEND_URL=http://host.docker.internal:5050
