--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,8 @@
 python-dotenv
-# langchain==0.0.200
-langchain @ git+https://github.com/michaeltansg/langchain@cc5d19d716a02c56e275363ac3901420674d4ae9
-openai==0.27.6
+langchain @ git+https://github.com/michaeltansg/langchain@3563f13aa8666a526a74ae259003015cf16e424e
+openai==0.27.8
 tiktoken==0.4.0
-atlassian-python-api==3.38.0
+atlassian-python-api==3.39.0
+tenacity==8.2.2
 beautifulsoup4==4.12.2
-pytesseract==0.3.10
-pdf2image==1.16.3
-Pillow==9.5.0
 lxml==4.9.2
-svglib==1.5.1
-rlPyCairo==0.3.0
-python-poppler==0.4.1
-xlrd==2.0.1
-requests==2.31.0
